# pharamaceutical

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  api.py  data.py  database.py  docker-compose.yml  evaluation.py  logging_config.py  pyproject.toml  queueing.py  reporting.py  requirements.txt  run.ps1  run_api.py  run_dashboard.py  scoring.py  security.py  seed_data.py  storage.py  training.py  validation.py  visualization.py
.github/workflows/: ci.yml
docs/: API.md  DATASETS_AND_TRAINING.md  ENTERPRISE.md  INSTALLATION.md
frontend/: app.js  index.html  package-lock.json  package.json  styles.css
frontend/src/: main.jsx  styles.css
monitoring/: README.md
scripts/: healthcheck.py
tests/: conftest.py  test_api.py  test_data.py  test_fr_integration.py  test_training.py
tests/fixtures/: benchmark_pairs.csv  bindingdb_sample.csv
