[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hqca"
version = "0.1.0"
description = "Hybrid Quantum-Classical Assistant synthetic data pipeline for drug discovery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "numpy",
    "pandas",
    "rdkit",
    "uvicorn",
]

[project.optional-dependencies]
quantum = [
    "pennylane",
]
dev = [
    "httpx",
    "pytest",
]

[tool.setuptools]
py-modules = ["api", "data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
